🐛 Fixed add button styling not showing

--- a/src/app/viewdashboards/viewdashboards.component.css
+++ b/src/app/viewdashboards/viewdashboards.component.css
@@ -7,7 +7,7 @@
   background-color: #003345;
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  gap: 20px;
 }
 .results mat-toolbar button{
   color: white;
